--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -31,8 +31,8 @@ body {
 
 .navbar {
   padding: 9px 25px;
-  position: fixed;
-  top: 0;
+  position: sticky;
+  // top: 0;  // !* sticky navbar 
   z-index: 9999;
   width: 100%;
 
@@ -189,72 +189,6 @@ body {
 
   .active {
     background: pink;
-  }
-}
-
-.player {
-  position: relative;
-  color: #fff;
-  min-height: 250px;
-
-  .overlay {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(0, 0, 0, 0.3);
-    z-index: auto;
-    cursor: pointer;
-  }
-
-  img {
-    height: 350px;
-    height: 100%;
-    width: 100%;
-  }
-
-  .player-play-info {
-    position: absolute;
-    bottom: 50px;
-    text-align: center;
-    width: 100%;
-
-    #playerInfo {
-      display: -webkit-box;
-      -webkit-line-clamp: 1;
-      -webkit-box-orient: vertical;
-      overflow: hidden;
-      padding: 0 20px;
-    }
-  }
-
-  .player-control {
-    position: absolute;
-    display: flex;
-    top: 83%;
-    left: 22%;
-    gap: 15px;
-    justify-content: center;
-    align-items: center;
-
-    button {
-      background: unset;
-      border: unset;
-      padding: 0;
-      margin: 0;
-      color: #fff;
-    }
-
-    .playIcon {
-      background: #fff;
-      width: 40px;
-      height: 40px;
-      border-radius: 30px;
-      color: #000;
-    }
   }
 }
 
