--- a/src/pages/home/style.module.scss
+++ b/src/pages/home/style.module.scss
@@ -18,24 +18,25 @@
 
 // HERO
 
-.heroSlide {
-  width: 105%;
+.heroSlider {
+  width: 100%;
 }
+
 .heroSlide:hover {
   cursor: pointer;
 }
 
-.swiper {
-  width: 100%;
-  height: 100%;
-}
+// .swiper {
+//   width: 100%;
+//   height: 100%;
+// }
 
-.swiper-slide img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
+// .swiper-slide img {
+//   display: block;
+//   width: 100%;
+//   height: 100%;
+//   object-fit: cover;
+// }
 
 // PODCAST
 .slider {
