--- a/src/layout/style.module.scss
+++ b/src/layout/style.module.scss
@@ -20,9 +20,11 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vh;
+
 }
 
-.outletContainer {
-  padding: 25px 60px;
+@media (max-width: 576px) {
+  .sidebar {
+    height: 420px;
+  }
 }
