--- a/src/assets/scss/_typography.scss
+++ b/src/assets/scss/_typography.scss
@@ -1,4 +1,8 @@
 :root {
+  // * FONTS
+  --f-poppings: 'Poppins', sans-serif;
+  --f-patrick-hand: 'Patrick Hand', cursive;
+
   // * FONT SIZE
   --fs-8: 0.8rem;
   --fs-9: 0.9rem;
