--- a/src/assets/scss/_typography.scss
+++ b/src/assets/scss/_typography.scss
@@ -1,6 +1,6 @@
 :root {
   // * FONTS
-  --f-poppings: 'Poppins', sans-serif;
+  --f-poppins: 'Poppins', sans-serif;
   --f-patrick-hand: 'Patrick Hand', cursive;
 
   // * FONT SIZE
@@ -17,6 +17,7 @@
   --fs-20: 2rem;
   --fs-25: 2.5rem;
   --fs-30: 3rem;
+  --fs-31: 3.1rem;
   --fs-32: 3.2rem;
   --fs-39: 3.9rem;
   --fs-48: 4.8rem;
