--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -11460,7 +11460,35 @@ textarea.form-control-lg {
 }
 
 .mt-5 {
+  margin-top: 2rem !important;
+}
+
+.mt-6 {
+  margin-top: 2.5rem !important;
+}
+
+.mt-7 {
   margin-top: 3rem !important;
+}
+
+.mt-8 {
+  margin-top: 3.5rem !important;
+}
+
+.mt-9 {
+  margin-top: 4rem !important;
+}
+
+.mt-10 {
+  margin-top: 4.5rem !important;
+}
+
+.mt-11 {
+  margin-top: 5rem !important;
+}
+
+.mt-12 {
+  margin-top: 5.5rem !important;
 }
 
 .mt-auto {
