rehandled login step flow

--- a/src/assets/scss/_typography.scss
+++ b/src/assets/scss/_typography.scss
@@ -13,6 +13,7 @@
   --fs-14: 1.4rem;
   --fs-15: 1.5rem;
   --fs-16: 1.6rem;
+  --fs-17: 1.7rem;
   --fs-18: 1.8rem;
   --fs-20: 2rem;
   --fs-25: 2.5rem;
