--- a/src/pages/login/index.module.scss
+++ b/src/pages/login/index.module.scss
@@ -5,14 +5,21 @@
   text-align: center;
 
   &__link {
+    display: flex;
+    align-items: center;
     color: black;
-  }
-
-  &__item {
+    text-decoration: none;
     transition: 0.175s all;
+    padding: 0.5rem;
   }
 
-  &__item:hover {
+  &__text {
+    padding: 0 1rem 0 0;
+    font-size: var(--fs-12);
+    font-weight: var(--fw-7);
+  }
+
+  &__link:hover {
     border-radius: 8px;
     cursor: pointer;
     background-color: #ced4da;
@@ -75,7 +82,7 @@
     content: '';
     display: block;
     height: 0.02rem;
-    min-width: 80%;
+    width: 100%;
     background-color: #eaeaea;
     margin: 0 0.5rem;
   }
