mood filter update

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -14684,6 +14684,7 @@ textarea.form-control-lg {
   --fs-18: 1.8rem;
   --fs-20: 2rem;
   --fs-25: 2.5rem;
+  --fs-27: 2.7rem;
   --fs-30: 3rem;
   --fs-31: 3.1rem;
   --fs-32: 3.2rem;
