--- a/src/components/select/index.module.scss
+++ b/src/components/select/index.module.scss
@@ -3,19 +3,25 @@
   font-weight: var(--fw-6);
 }
 
+.placeholder {
+  font-size: var(--fs-27);
+  line-height: 2.7rem;
+  opacity: 0.3;
+}
+
 @media (max-width: 576px) {
   .search {
     display: none;
   }
 }
 
-@media (max-width: 768) {
+@media (max-width: 768px) {
   .search {
-    font-size: 2rem;
+    font-size: 1.3rem;
   }
 }
 
-@media (max-width: 992) {
+@media (max-width: 992px) {
   .search {
     font-size: 2.3rem;
     font-weight: var(--fw-5);
