--- a/src/layout/app-layout/style.module.scss
+++ b/src/layout/app-layout/style.module.scss
@@ -51,19 +51,6 @@
   }
 }
 
-.sidebar {
-  // position: sticky;
-  top: 0;
-  left: 0;
-  width: 100%;
-}
-
-@media (max-width: 576px) {
-  .sidebar {
-    height: 420px;
-  }
-}
-
 .navbar {
   position: fixed !important;
 }
@@ -74,13 +61,23 @@
   padding-top: 49.25px;
   height: calc(100vh - 49.25px);
 
-  &__contentContainer {
+  &__content {
     padding: 2.5rem 1.7rem;
   }
 }
 
 @media (max-width: 768px) {
-  .mainRow {
+  .wrapper {
     flex-direction: column;
+  }
+  
+  .sidebar {
+    height: 350px;
+  }
+}
+
+@media (max-width: 576px) {
+  .sidebar {
+    height: 320px;
   }
 }
