--- a/src/pages/home/index.module.scss
+++ b/src/pages/home/index.module.scss
@@ -18,7 +18,7 @@
 
 // HERO
 .heroSlide {
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+  // box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
 }
 
 .heroSlider {
@@ -55,7 +55,7 @@
     font-size: var(--fs-30);
     font-weight: var(--fw-6);
   }
-  
+
   &__seeAll {
     color: black;
     text-decoration: underline;
@@ -134,3 +134,71 @@
 // .content {
 //   color: red;
 // }
+
+.card {
+  max-height: 334px;
+
+  &__link {
+    text-decoration: none;
+  }
+  &__img {
+    width: 100%;
+    height: 100%;
+    // object-fit: cover;
+    object-position: bottom;
+  }
+  // &__body {
+  //   display: flex;
+  //   flex-direction: column;
+  //   justify-content: space-between;
+  // }
+  &__title {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    font-size: var(--fs-25) !important;
+    font-weight: var(--fw-6);
+    color: black;
+    line-height: 2.6rem;
+    height: 100%;
+  }
+  &__description {
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    font-size: var(--fs-20);
+    font-weight: var(--fw-4);
+    line-height: 2.4rem;
+    color: black;
+    height: 100%;
+  }
+}
+
+@media (max-width: 960px) {
+  .card {
+    &__title {
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+      font-size: var(--fs-16);
+      font-weight: var(--fw-5);
+      color: black;
+      line-height: 2.2rem;
+      height: 100%;
+    }
+    &__description {
+      display: -webkit-box;
+      -webkit-line-clamp: 3;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+      font-size: var(--fs-13);
+      font-weight: var(--fw-4);
+      line-height: 1.8rem;
+      color: black;
+      height: 100%;
+    }
+  }
+}
