--- a/src/pages/home/index.module.scss
+++ b/src/pages/home/index.module.scss
@@ -7,40 +7,6 @@
 @import '../../../node_modules/bootstrap/scss/utilities/api';
 @import '../../assets/scss/variables';
 
-// .home {
-//   width: 82%;
-//   padding: 50px;
-//   position: relative;
-//   left: 18%;
-//   top: 65px;
-//   background: #e1e1e1;
-// }
-
-// HERO
-.heroSlide {
-  // box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
-}
-
-.heroSlider {
-  width: 100%;
-}
-
-.heroSlide:hover {
-  cursor: pointer;
-}
-
-// .swiper {
-//   width: 100%;
-//   height: 100%;
-// }
-
-// .swiper-slide img {
-//   display: block;
-//   width: 100%;
-//   height: 100%;
-//   object-fit: cover;
-// }
-
 // PODCAST
 .slider {
   :global(.swiper-wrapper) {
@@ -64,94 +30,18 @@
   }
 }
 
-// .swiper-pagination-bullet {
-//   right: 0;
-//   background-color: #000 !important;
-// }
-// .swiper-container {
-//   width: 480px;
-// }
-
-// @media screen and (min-width: 640px) {
-//   .swiper-container {
-//     width: 640px;
-//   }
-// }
-
-// @media screen and (min-width: 768px) {
-//   .swiper-container {
-//     width: 768px;
-//   }
-// }
-
-// .heroSlide {
-//   .heroSlider {
-//     .heroCont {
-//       @include center;
-
-//       .heroSliderContent {
-//         // @include center;
-//         // text-align: left;
-//         font-size: 30px;
-//         font-weight: 200;
-//       }
-//     }
-//   }
-
-//   .swiper-slide {
-//     text-align: center;
-//     font-size: 18px;
-//     background: #fff;
-
-//     /* Center slide text vertically */
-//     display: -webkit-box;
-//     display: -ms-flexbox;
-//     display: -webkit-flex;
-//     display: flex;
-//     -webkit-box-pack: center;
-//     -ms-flex-pack: center;
-//     -webkit-justify-content: center;
-//     justify-content: center;
-//     -webkit-box-align: center;
-//     -ms-flex-align: center;
-//     -webkit-align-items: center;
-//     align-items: center;
-//   }
-
-//   .swiper-slide {
-//     width: 80% !important;
-//   }
-
-//   .swiper-slide:nth-child(2n) {
-//     width: 80% !important;
-//   }
-
-//   .swiper-slide:nth-child(3n) {
-//     width: 20% !important;
-//   }
-// }
-
-// .content {
-//   color: red;
-// }
-
 .card {
-  max-height: 334px;
+  width: 100%;
+  height: 100%;
+  box-shadow: 0px 4.69757px 75.1611px rgb(0 0 0 / 7%);
+  background: #ffffff;
 
   &__link {
     text-decoration: none;
   }
   &__img {
-    width: 100%;
-    height: 100%;
-    // object-fit: cover;
-    object-position: bottom;
+    object-fit: cover;
   }
-  // &__body {
-  //   display: flex;
-  //   flex-direction: column;
-  //   justify-content: space-between;
-  // }
   &__title {
     display: -webkit-box;
     -webkit-line-clamp: 2;
@@ -179,25 +69,15 @@
 @media (max-width: 960px) {
   .card {
     &__title {
-      display: -webkit-box;
-      -webkit-line-clamp: 2;
-      -webkit-box-orient: vertical;
-      overflow: hidden;
       font-size: var(--fs-16);
       font-weight: var(--fw-5);
-      color: black;
       line-height: 2.2rem;
       height: 100%;
     }
     &__description {
-      display: -webkit-box;
-      -webkit-line-clamp: 3;
-      -webkit-box-orient: vertical;
-      overflow: hidden;
       font-size: var(--fs-13);
       font-weight: var(--fw-4);
       line-height: 1.8rem;
-      color: black;
       height: 100%;
     }
   }
