--- a/src/assets/scss/_typography.scss
+++ b/src/assets/scss/_typography.scss
@@ -4,6 +4,8 @@
   --f-patrick-hand: 'Patrick Hand', cursive;
 
   // * FONT SIZE
+  --fs-6: 0.6rem;
+  --fs-7: 0.7rem;
   --fs-8: 0.8rem;
   --fs-9: 0.9rem;
   --fs-10: 1rem;
