--- a/src/feature/sidebar/style.module.scss
+++ b/src/feature/sidebar/style.module.scss
@@ -2,8 +2,8 @@
 .player {
   position: relative;
   color: #fff;
-  height: 100%;
-
+  width: 100%;
+  max-height: 40rem;
 
   &__overlay {
     position: absolute;
@@ -18,7 +18,7 @@
   &__img {
     height: 100%;
     width: 100%;
-    object-fit: cover;
+    // object-fit: cover;
   }
 
   .info {
