--- a/src/layout/app-layout/style.module.scss
+++ b/src/layout/app-layout/style.module.scss
@@ -3,6 +3,30 @@
 @import '../../../node_modules/bootstrap/scss/variables';
 @import '../../../node_modules/bootstrap/scss/utilities/api';
 
+//Wrapper
+
+// Sidebar
+.sidebar {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: calc(100vh - 48.25px);
+
+  &__description {
+    padding: 0 3rem;
+    margin: 1rem 0;
+    font-family: var(--f-poppings);
+    font-size: var(--fs-17);
+    font-weight: var(--fw-4);
+    line-height: 26px;
+    display: -webkit-box;
+    -webkit-line-clamp: 14;
+    -webkit-box-orient: vertical;
+    text-overflow: ellipsis;
+    overflow: hidden;
+  }
+}
+
 // Navbar
 .btnContainer {
   display: flex;
@@ -10,7 +34,7 @@
   justify-content: center;
 
   &__moodBtn {
-    font-size: var(--fs-14);
+    font-size: var(--fs-17);
     font-weight: var(--fw-6);
     color: #fff;
     background: linear-gradient(259.17deg, #9740ed 16.17%, #4085ed 85.39%);
@@ -29,7 +53,7 @@
 
   &__btn {
     font-family: var(--f-poppings);
-    font-size: var(--fs-14);
+    font-size: var(--fs-16);
     font-weight: var(--fw-5);
     color: black;
     border: none;
@@ -54,6 +78,15 @@
 
 .navbar {
   position: fixed !important;
+
+  &__hamburger {
+    width: 100%;
+    height: 100%;
+  }
+  &__logo {
+    width: 100%;
+    height: 3rem;
+  }
 }
 
 .wrapper {
@@ -67,22 +100,78 @@
   }
 }
 
+@media (max-width: 1400px) {
+  .sidebar {
+    &__description {
+      -webkit-line-clamp: 18;
+    }
+  }
+}
+
+@media (max-width: 1200px) {
+  .sidebar {
+    &__description {
+      -webkit-line-clamp: 24;
+    }
+  }
+}
+
+@media (max-width: 992px) {
+  .sidebar {
+    &__description {
+      -webkit-line-clamp: 27;
+    }
+  }
+}
+
 @media (max-width: 768px) {
   .wrapper {
     flex-direction: column;
+
+    &__content {
+      margin-left: 0;
+    }
+  }
+
+  .sidebar {
+    flex-direction: row;
+    height: auto;
+    &__description {
+      display: none;
+    }
   }
 }
 
 @media (max-width: 576px) {
   .navbar {
     padding: 0.9rem 0.775rem !important;
+
+    &__logo {
+      width: 100%;
+      height: 2rem;
+    }
   }
 
   .btnContainer {
     &__moodBtn {
-      font-size: var(--fs-10);
-      font-weight: var(--fw-4);
-      padding: 0.175rem 1.775rem;
+      position: relative;
+      font-size: var(--fs-13);
+      font-weight: var(--fw-5);
+      padding: 0.3rem 2.1rem;
+      color: #fff;
+      background: black;
+
+      &:hover {
+        color: black;
+        background: #fff;
+      }
+    }
+
+    .tm {
+      position: absolute;
+      top: 0.375rem;
+      font-size: var(--fs-7);
+      font-weight: var(--fw-6);
     }
   }
 }
