--- a/src/pages/home/index.module.scss
+++ b/src/pages/home/index.module.scss
@@ -31,8 +31,7 @@
 }
 
 .card {
-  width: 100%;
-  height: 100%;
+  max-height: 334.7px;
   box-shadow: 0px 4.69757px 75.1611px rgb(0 0 0 / 7%);
   background: #ffffff;
 
@@ -40,6 +39,7 @@
     text-decoration: none;
   }
   &__img {
+    height: 100%;
     object-fit: cover;
   }
   &__title {
