--- a/src/feature/sidebar/style.module.scss
+++ b/src/feature/sidebar/style.module.scss
@@ -23,7 +23,7 @@
   position: relative;
   color: #fff;
   width: 100%;
-  // max-height: 40rem;
+  max-height: 40rem;
 
   &__overlay {
     position: absolute;
@@ -36,7 +36,7 @@
   }
 
   &__img {
-    height: 100%;
+    max-height: 40rem;
     width: 100%;
     // object-fit: cover;
   }
@@ -85,6 +85,10 @@
 
 // BANNER
 
+.banner {
+  max-height: 35rem;
+}
+
 @media (max-width: 1200px) {
   .switch {
     padding: 1rem 0.5rem;
@@ -95,9 +99,18 @@
       font-weight: var(--fw-6);
     }
   }
+
+  .player {
+    max-height: 40rem;
+    &__img {
+      max-height: 40rem;
+      width: 100%;
+      // object-fit: cover;
+    }
+  }
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 992px) {
   .switch {
     padding: 1rem 0.3rem;
     grid-gap: 0.5rem;
@@ -106,6 +119,17 @@
       font-size: var(--fs-12);
       font-weight: var(--fw-5);
     }
+  }
+
+  .player {
+    max-height: 35rem;
+    &__img {
+      max-height: 35rem;
+    }
+  }
+
+  .banner {
+    max-height: 35rem;
   }
 }
 
@@ -123,6 +147,13 @@
     &__text {
       font-size: var(--fs-16);
       font-weight: var(--fw-6);
+    }
+  }
+
+  .player {
+    max-height: fit-content;
+    &__img {
+      max-height: fit-content;
     }
   }
 }
