--- a/src/feature/sidebar/style.module.scss
+++ b/src/feature/sidebar/style.module.scss
@@ -23,7 +23,7 @@
   position: relative;
   color: #fff;
   width: 100%;
-  max-height: 40rem;
+  max-height: 32rem;
 
   &__overlay {
     position: absolute;
@@ -36,7 +36,7 @@
   }
 
   &__img {
-    max-height: 40rem;
+    max-height: 32rem;
     width: 100%;
     // object-fit: cover;
   }
@@ -83,10 +83,28 @@
   }
 }
 
+
+
 // BANNER
 
 .banner {
-  max-height: 35rem;
+  max-height: 30rem;
+}
+
+@media (max-width: 1400px) {
+
+  .player{
+    max-height: 25rem;
+
+    &__img{
+      max-height: 25rem;
+    }
+  }
+
+  .banner {
+    max-height: 20rem;
+  }
+
 }
 
 @media (max-width: 1200px) {
