--- a/src/assets/scss/_typography.scss
+++ b/src/assets/scss/_typography.scss
@@ -17,6 +17,7 @@
   --fs-16: 1.6rem;
   --fs-17: 1.7rem;
   --fs-18: 1.8rem;
+  --fs-19: 1.9rem;
   --fs-20: 2rem;
   --fs-25: 2.5rem;
   --fs-27: 2.7rem;
