--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -21,6 +21,7 @@ body {
   font-family: $primaryFont;
   padding-right: 0px !important; // **Can couse ui issue
   overflow-x: hidden;
+  background: #fcfcfc;
 }
 
 .h1,
@@ -475,6 +476,5 @@ div#headlessui-menu-items-\:r3\: {
 }
 
 // SECTION
-
 
 // SWIPER
