--- a/src/layout/app-layout/style.module.scss
+++ b/src/layout/app-layout/style.module.scss
@@ -159,14 +159,19 @@
   .wrapper {
     flex-direction: column;
 
+    &__side {
+      width: 100%;
+    }
     &__content {
-      margin-left: 0;
+      width: 100%;
     }
   }
 
   .sidebar {
     flex-direction: row;
+    position: unset;
     height: auto;
+    max-width: unset;
     &__description {
       display: none;
     }
