ui some changes

--- a/src/pages/home/components/video-slider/index.module.scss
+++ b/src/pages/home/components/video-slider/index.module.scss
@@ -16,6 +16,7 @@
     justify-content: space-between;
     align-items: flex-start;
     height: 17rem;
+    box-shadow: 0px 3.79351px 60.6962px rgba(0, 0, 0, 0.07);
   }
   &__title {
     text-align: center;
