--- a/src/components/ui/card/style.module.scss
+++ b/src/components/ui/card/style.module.scss
@@ -1,6 +1,6 @@
 .card {
   min-height: 447.92px;
-
+  border: none !important;
   &__link {
     text-decoration: none;
   }
@@ -13,20 +13,21 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    box-shadow: 0px 5.33239px 85.3182px rgba(0, 0, 0, 0.07);
   }
   &__title {
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     overflow: hidden;
-    font-size: 20px;
-    font-weight: 600;
+    font-size: 20px !important;
+    font-weight: 600 !important;
     color: black;
     line-height: 26.66px;
   }
   &__description {
     display: -webkit-box;
-    -webkit-line-clamp: 3;
+    -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     overflow: hidden;
     font-size: var(--fs-16);
