--- a/src/pages/home/components/hero-slider/index.module.scss
+++ b/src/pages/home/components/hero-slider/index.module.scss
@@ -12,13 +12,11 @@
   }
   &__title {
     display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
     overflow: hidden;
-    font-size: var(--fs-25) !important;
-    font-weight: var(--fw-6);
+    font-size: var(--fs-48) !important;
+    font-weight: var(--fw-7) !important;
     color: black;
-    line-height: 2.6rem;
+    line-height: 4.8rem !important;
     height: 100%;
   }
   &__description {
