--- a/src/assets/scss/_typography.scss
+++ b/src/assets/scss/_typography.scss
@@ -20,6 +20,7 @@
   --fs-19: 1.9rem;
   --fs-20: 2rem;
   --fs-25: 2.5rem;
+  --fs-26: 2.6rem;
   --fs-27: 2.7rem;
   --fs-30: 3rem;
   --fs-31: 3.1rem;
@@ -36,4 +37,8 @@
   --fw-6: 600;
   --fw-7: 700;
   --fw-8: 800;
+
+  // * COLORS
+  --cl-placeholder-bg: #585858;
+  --cl-placeholder: #919191;
 }
