--- a/src/layout/app-layout/style.module.scss
+++ b/src/layout/app-layout/style.module.scss
@@ -37,6 +37,13 @@
   background: red;
 }
 
+.editProfile {
+  color: #fff;
+  background-color: #252424;
+  border-radius: 4.3rem;
+  margin-top: 1.1rem;
+}
+
 .navBtn {
   font-size: var(--fs-26);
   font-weight: var(--fw-7);
@@ -46,7 +53,7 @@
   transition: 0.3s ease;
   &:hover {
     opacity: 0.9;
-    color: rgba(44, 44, 44, 0.665);
+    color: rgba(44, 44, 44, 0.858);
   }
 }
 
@@ -85,6 +92,46 @@
       border: none !important;
     }
   }
+}
+
+.accordionContainer {
+  padding-right: 0 !important;
+  padding-left: 0 !important;
+
+  &__item {
+    background-color: transparent !important;
+  }
+
+  &__header {
+    .accordion-button.collapsed {
+      background: red;
+    }
+    & button {
+      background-color: transparent !important;
+      box-shadow: none !important;
+      color: black !important;
+      &:not(.collapsed)::after {
+        background-image: url();
+        // background-image: initial !important;
+        color: black !important;
+      }
+      &::after {
+        display: none !important;
+        //   color: black !important;
+      }
+    }
+    // & button:not(.collapsed)::after {
+    //   background-image: red !important;
+    //   color: black !important;
+    // }
+  }
+  &__icon {
+    margin-left: 2rem;
+  }
+}
+
+.logout {
+  margin-left: 1rem;
 }
 
 .btnContainer {
