deleted auth slice, token stored on localStorage, fixed login and register flows, creaeted new session wrapper.

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -21,7 +21,7 @@ body {
   font-family: $primaryFont;
   padding-right: 0px !important; // **Can couse ui issue
   overflow-x: hidden;
-  background: #fcfcfc;
+  background: #e5e5e5;
 }
 
 .h1,
