--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -14720,7 +14720,7 @@ body {
   font-family: "Poppins", sans-serif;
   padding-right: 0px !important;
   overflow-x: hidden;
-  background: #fcfcfc;
+  background: #e5e5e5;
 }
 
 .h1,
