--- a/src/components/ui/card/index.module.scss
+++ b/src/components/ui/card/index.module.scss
@@ -18,5 +18,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  box-shadow: 0px 5.33239px 85.3182px rgba(0, 0, 0, 0.07);
+  background-color: #ffffff;
+
+  // box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
 }
