--- a/src/sections/card/index.module.scss
+++ b/src/sections/card/index.module.scss
@@ -3,8 +3,9 @@
       padding-bottom: 20px;
     }
     :global(.swiper-pagination) {
-      bottom: 0;
+      bottom: 0 !important;
       text-align: right;
+      background-color: #E5E5E5 !important;
     }
   
     &__header {
