--- a/src/sections/sliders/components/hero-slider/index.module.scss
+++ b/src/sections/sliders/components/hero-slider/index.module.scss
@@ -1,11 +1,8 @@
 .card {
-  max-height: 334.7px;
-  box-shadow: 0px 4.69757px 75.1611px rgb(0 0 0 / 7%);
+  min-height: 33.47rem;
   background: #ffffff;
 
   &__title {
-    display: -webkit-box;
-    overflow: hidden;
     font-size: var(--fs-48) !important;
     font-weight: var(--fw-7) !important;
     color: black;
@@ -21,20 +18,46 @@
 
 @media (max-width: 1400px) {
   .card {
-    max-height: 300px;
+    min-height: 30rem;
+
+    &__title {
+      font-size: var(--fs-39) !important;
+      font-weight: var(--fw-7) !important;
+      line-height: 4.6rem !important;
+      height: 100%;
+    }
   }
   .image {
-    height: 300px;
+    height: 30rem;
   }
 }
 
 @media (max-width: 960px) {
   .card {
+    min-height: 20rem;
     &__title {
-      font-size: var(--fs-16);
-      font-weight: var(--fw-5);
-      line-height: 2.2rem;
+      font-size: var(--fs-30) !important;
+      font-weight: var(--fw-6) !important;
       height: 100%;
+    }
+    .image {
+      height: 20rem;
+    }
+  }
+}
+
+
+@media (max-width: 560px) {
+  .card {
+    min-height: 22rem;
+    &__title {
+      padding: 1rem;
+      font-size: var(--fs-30) !important;
+      font-weight: var(--fw-6) !important;
+      height: 100%;
+    }
+    .image {
+      height: 22rem;
     }
   }
 }
