--- a/src/sections/sliders/components/hero-slider/index.module.scss
+++ b/src/sections/sliders/components/hero-slider/index.module.scss
@@ -6,7 +6,8 @@
     font-size: var(--fs-48) !important;
     font-weight: var(--fw-7) !important;
     color: black;
-    line-height: 4.8rem !important;
+    padding: 1rem;
+     line-height: 5.150rem !important;
     height: 100%;
   }
 }
