--- a/src/layout/app-layout/style.module.scss
+++ b/src/layout/app-layout/style.module.scss
@@ -10,7 +10,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: calc(100vh - 48.25px);
+  height: calc(100vh - 4.925rem);
   position: fixed;
   max-width: 18%;
 
@@ -199,8 +199,8 @@
 .wrapper {
   display: flex;
   width: 100%;
-  padding-top: 49.25px;
-  height: calc(100vh - 49.25px);
+  padding-top: 4.925rem;
+  height: calc(100vh - 4.925rem);
 
   &__side {
     width: 18%;
@@ -208,7 +208,7 @@
   }
 
   &__content {
-    padding: 2.5rem 1.7rem;
+    // padding: 2.5rem 1.7rem;
     width: 82%;
     max-width: 100%;
   }
@@ -267,6 +267,7 @@
       width: 100%;
     }
     &__content {
+      margin-top: 3rem;
       width: 100%;
     }
   }
