--- a/src/pages/podcast/index.module.scss
+++ b/src/pages/podcast/index.module.scss
@@ -1,3 +1,12 @@
+.podcast {
+  padding: 2.5rem 1.7rem;
+
+  &__header {
+    font-size: var(--fs-30);
+    font-weight: var(--fw-6);
+  }
+}
+
 .title {
   display: -webkit-box;
   -webkit-line-clamp: 2;
