--- a/src/pages/podcast/detail/index.module.scss
+++ b/src/pages/podcast/detail/index.module.scss
@@ -14,6 +14,7 @@
       font-weight: var(--fw-5);
     }
     &__text {
+      margin-left: 1rem;
       font-size: var(--fs-20);
       font-weight: var(--fw-5);
     }
@@ -50,6 +51,11 @@
   font-weight: var(--fw-5);
   text-decoration: underline;
 }
+
+// .heartIcon {
+//   color: red;
+//   background-color: palegoldenrod;
+// }
 
 @media (max-width: 1400px) {
   .wrapper {
