--- a/src/components/ui/card/index.module.scss
+++ b/src/components/ui/card/index.module.scss
@@ -4,6 +4,7 @@
 }
 
 .header {
+  position: relative;
   &__link {
     text-decoration: none;
   }
@@ -11,6 +12,26 @@
     height: 268px;
     object-fit: cover;
     width: 100%;
+  }
+}
+
+.icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  width: 7rem;
+  height: 7rem;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 50%;
+  background-color: #f05e0c;
+
+  &__item {
+    width: 4rem;
+    height: 4rem;
+    color: #fff;
   }
 }
 
