implemented podcast fitler logic

--- a/src/components/ui/filter-bar/index.module.scss
+++ b/src/components/ui/filter-bar/index.module.scss
@@ -33,6 +33,11 @@
   width: max-content !important;
 }
 
+.clicked {
+   background-color: #bababaad !important;
+
+}
+
 @media (max-width: 1200px) {
   .backBanner {
     height: 4rem;
